--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -66,12 +66,12 @@ CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 CONFIG_PACKAGE_brcmfmac-firmware-4329-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43362-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio=y
-CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-3b=y
-CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-zero-w=y
+# CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-3b is not set
+# CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-zero-w is not set
 CONFIG_PACKAGE_brcmfmac-firmware-43430a0-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio=y
-CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio-rpi-3b-plus=y
-CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio-rpi-4b=y
+# # CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio-rpi-3b-plus is not set
+# CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio-rpi-4b is not set
 CONFIG_PACKAGE_brcmfmac-firmware-usb=y
 CONFIG_PACKAGE_carl9170-firmware=y
 CONFIG_PACKAGE_cypress-firmware-4339-sdio=y
@@ -170,7 +170,7 @@ CONFIG_PACKAGE_kmod-rt2500-usb=y
 # CONFIG_PACKAGE_kmod-rt2800-lib is not set
 # CONFIG_PACKAGE_kmod-rt2800-pci is not set
 CONFIG_PACKAGE_kmod-rt2800-usb=y
-CONFIG_PACKAGE_kmod-rt2x00-lib is not set
+# CONFIG_PACKAGE_kmod-rt2x00-lib is not set
 # CONFIG_PACKAGE_RT2X00_DEBUG is not set
 CONFIG_PACKAGE_kmod-rt2x00-usb=y
 # CONFIG_PACKAGE_kmod-rt61-pci is not set
