--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -240,6 +240,74 @@ CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-fs-xfs=y
 CONFIG_PACKAGE_kmod-fuse=y
 
+#HelmiWrt Packages
+CONFIG_PACKAGE_corkscrew=y
+CONFIG_PACKAGE_luci-app-openspeedtest=y
+CONFIG_PACKAGE_luci-app-shutdown=y
+CONFIG_PACKAGE_luci-app-tinyfm=y
+CONFIG_PACKAGE_luci-app-v2raya=y
+CONFIG_PACKAGE_luci-app-wegare=y
+
+#Requirements packages for Libernet-Xderm-Limiter-v2rayA-Mikhmon
+CONFIG_PACKAGE_procps-ng=y
+CONFIG_PACKAGE_procps-ng-ps=y
+CONFIG_PACKAGE_sshpass=y
+CONFIG_PACKAGE_python3-pip=y
+CONFIG_PACKAGE_coreutils-timeout=y
+CONFIG_PACKAGE_git=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-stdbuf=y
+CONFIG_PACKAGE_jq=y
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_openssh-client=y
+CONFIG_PACKAGE_https-dns-proxy=y
+CONFIG_PACKAGE_php7=y
+CONFIG_PACKAGE_php7-cgi=y
+CONFIG_PACKAGE_php7-mod-json=y
+CONFIG_PACKAGE_php7-mod-session=y
+CONFIG_PACKAGE_python3=y
+CONFIG_PACKAGE_httping=y
+CONFIG_PACKAGE_stunnel=y
+CONFIG_PACKAGE_stubby=y
+CONFIG_PACKAGE_getdns=y
+CONFIG_PACKAGE_libudev-fbsd=y
+CONFIG_PACKAGE_libudev-zero=y
+CONFIG_PACKAGE_librt=y
+CONFIG_PACKAGE_libpthread=y
+CONFIG_PACKAGE_libudev-zero=y
+CONFIG_PACKAGE_libnss=y
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_php7-mod-gmp=y
+CONFIG_PACKAGE_php7-mod-gettext=y
+CONFIG_PACKAGE_php7-mod-iconv=y
+CONFIG_PACKAGE_php7-mod-pcntl=y
+CONFIG_PACKAGE_zoneinfo-core=y
+CONFIG_PACKAGE_zoneinfo-asia=y
+CONFIG_PACKAGE_zoneinfo-simple=y
+CONFIG_PACKAGE_php7=y
+CONFIG_PACKAGE_php7-fpm=y
+CONFIG_PACKAGE_php7-mod-curl=y
+CONFIG_PACKAGE_php7-mod-gd=y
+CONFIG_PACKAGE_php7-mod-iconv=y
+CONFIG_PACKAGE_php7-mod-json=y
+CONFIG_PACKAGE_php7-mod-mbstring=y
+CONFIG_PACKAGE_php7-mod-opcache=y
+CONFIG_PACKAGE_php7-mod-session=y
+CONFIG_PACKAGE_php7-mod-zip=y
+CONFIG_PACKAGE_php7-mod-sqlite3=y
+CONFIG_PACKAGE_php7-mod-pdo=y
+CONFIG_PACKAGE_php7-mod-pdo-sqlite=y
+CONFIG_PACKAGE_php7-mod-pdo-mysql=y
+CONFIG_PACKAGE_php7-cgi=y
+CONFIG_PACKAGE_php7-mod-dom=y
+CONFIG_PACKAGE_php7-mod-fileinfo=y
+CONFIG_PACKAGE_php7-mod-ctype=y
+CONFIG_PACKAGE_zoneinfo-core=y
+CONFIG_PACKAGE_zoneinfo-asia=y
+CONFIG_PACKAGE_zoneinfo-simple=y
+
 # USB Support:
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-dwc2=y
